# invenio-bulk-importer

./: .editorconfig  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  babel.ini  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_bulk_importer/: __init__.py  config.py  errors.py  ext.py  proxies.py  searchapp.py  views.py  webpack.py
invenio_bulk_importer/administration/: __init__.py  importer_tasks.py
invenio_bulk_importer/alembic/: 1748879646_setup_of_invenio_bulk_importer.py  1748879877_create_invenio_bulk_importer_tables.py
invenio_bulk_importer/assets/semantic-ui/js/invenio_bulk_importer/administration/tasks/: details.js  search.js
invenio_bulk_importer/contrib/: rdm_record_serializer.py
invenio_bulk_importer/record_types/: __init__.py  base.py  rdm.py  uow.py
invenio_bulk_importer/records/: __init__.py  api.py  models.py
invenio_bulk_importer/records/mappings/: __init__.py
invenio_bulk_importer/records/mappings/os-v2/: __init__.py
invenio_bulk_importer/records/mappings/os-v2/importerrecords/: importerrecord-v1.0.0.json
invenio_bulk_importer/records/mappings/os-v2/importertasks/: importertask-v1.0.0.json
invenio_bulk_importer/records/mappings/v7/: __init__.py
invenio_bulk_importer/records/mappings/v7/importertasks/: importertask-v1.0.0.json
invenio_bulk_importer/resources/: __init__.py  base.py  config.py  parser.py  rdm.py  resources.py
invenio_bulk_importer/serializers/: __init__.py  base.py
invenio_bulk_importer/serializers/records/: __init__.py  csv.py  csv2.py  csv_export.py  utils.py
invenio_bulk_importer/serializers/records/examples/: transformers.py
invenio_bulk_importer/serializers/records/examples/custom_fields/: __init__.py  base.py  imprint.py
invenio_bulk_importer/services/: __init__.py  components.py  config.py  facets.py  links.py  permissions.py  schemas.py  services.py  states.py  tasks.py
invenio_bulk_importer/templates/invenio_bulk_importer/: base.html  index.html
invenio_bulk_importer/templates/semantic-ui/invenio_bulk_importer/administration/: importer_task_details.html  importer_tasks_search.html
invenio_bulk_importer/views/: __init__.py  api.py
tests/: conftest.py  test_invenio_bulk_importer.py
tests/contrib/: conftest.py  test_serializers.py
tests/data/: rdm_records.csv  rdm_records_delete.csv  rdm_records_full.csv
tests/mock_module/: __init__.py
tests/record_types/: conftest.py  test_rdm_record_type_create_record.py  test_rdm_record_type_update_record.py  test_rdm_record_type_validation.py
tests/resources/: conftest.py  test_importer_task_apis.py  test_importer_task_create_apis copy.py  test_importer_task_create_apis.py  test_importer_task_delete_apis.py  test_importer_task_full_create_apis.py  test_importer_task_update_edit_revision_apis.py  test_importer_task_update_new_version_apis.py  test_rdm_record_type_validation.py
tests/serializers/: conftest.py  test_csv2_rdm_record_serializer.py  test_csv_export_serializer.py  test_csv_rdm_record_serializer.py  test_utils.py
tests/serializers/data/: rdm_records.csv
tests/services/: conftest.py  test_db_models.py  test_records_service.py  test_states.py  test_tasks_service.py
