# -*- coding: utf-8 -*-
#
# Copyright (C) 2025 Ubiquity Press.
#
# Invenio-Bulk-Importer is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invenio-bulk-importer"
description = "Bulk creation, import, and/or edittion of record and files for Invenio."
authors = [{name = "Ubiquity Press", email = "info@ubiquitypress.com"}]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["invenio", "inveniordm", "rdm", "importer", "bulk"]
license = {file = "LICENSE"}
dynamic = ["version"]
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.26.0,<2.0",
  "google-cloud-storage>=2.8.0,<3.2",
  "invenio-base>=2.0.0,<3.0.0",
  "invenio-i18n>=3.0.0,<4.0.0",
  "invenio-rdm-records>=18.14.0,<19.0.0",
  "invenio-search[opensearch2]>=3.0.0,<4.0.0",
  "pydantic>=2.11.5",
]

[project.urls]
Homepage = "https://github.com/ubiquitypress/invenio-bulk-importer"

[project.optional-dependencies]
tests = [
  "invenio-app>=2.0.0,<3.0.0",
  "invenio-db[postgresql,mysql]>=2.0.0,<3.0.0",
  "pytest-invenio>=3.0.0,<4.0.0",
  "pytest-black-ng>=0.4.0",
  "sphinx>=4.5.0",
  "ipdb",
]

[project.entry-points."invenio_base.apps"]
invenio_bulk_importer = "invenio_bulk_importer:InvenioBulkImporter"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_bulk_importer"

[tool.setuptools]
include-package-data = true
zip-safe = false
platforms = ["any"]


# Tools in alphabetical order
[tool.babel.compile_catalog]
directory = "invenio_bulk_importer/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "babel.ini"
output_file = "invenio_bulk_importer/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_bulk_importer/translations/messages.pot"
output_dir = "invenio_bulk_importer/translations/"

[tool.babel.javascript]
"**.js" = { encoding = "utf-8", extract_messages = ["$_", "jQuery._"] }

[tool.babel.jinja2]
"**/templates/**.html" = { encoding = "utf-8" }

[tool.babel.python]
"**.py" = { encoding = "utf-8" }

[tool.babel.update_catalog]
input_file = "invenio_bulk_importer/translations/messages.pot"
output_dir = "invenio_bulk_importer/translations/"

[tool.hatch.version]
path = "invenio_bulk_importer/__init__.py"

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = [
    "D401",
    "D403",
]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--black --isort --pydocstyle --doctest-glob=\"*.rst\" --doctest-modules --cov=invenio_bulk_importer --cov-report=term-missing"
testpaths = [
    "docs",
    "tests",
    "invenio_bulk_importer",
]
filterwarnings = [
    "ignore::marshmallow.warnings.RemovedInMarshmallow4Warning",
]
