# -*- coding: utf-8 -*-
#
# Copyright (C) 2025 Ubiquity Press.
#
# Invenio-Bulk-Importer is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invenio-bulk-importer"
description = "Bulk creation, import, and/or edittion of record and files for Invenio."
authors = [{ name = "Ubiquity Press", email = "info@ubiquitypress.com" }]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
keywords = ["invenio", "RDM", "bulk"]
license = { text = "MIT" }
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.26.0,<2.0",
  "google-cloud-storage>=2.8.0,<3.2",
  "invenio-administration>=4.0.0,<5.0.0",
  "invenio-base>=2.0.0,<3.0.0",
  "invenio-i18n>=3.0.0,<4.0.0",
  "invenio-rdm-records>=23.0.0,<24.0.0",
  "invenio-search[opensearch2]>=3.0.0,<4.0.0",
  "marshmallow>=3.26.1",
  "pydantic>=2.11.4,<3.0.0",
]
urls = {Repository = "https://github.com/ubiquitypress/invenio-bulk-importer"}

[project.optional-dependencies]
tests = [
  "invenio-app>=2.0.0,<3.0.0",
  "invenio-db[postgresql,mysql]>=2.0.0,<3.0.0",
  "pytest-invenio>=3.0.0,<4.0.0",
  "pytest-black>=0.3.0",
  "sphinx>=4.5.0",
  "ipdb",
]

# Entrypoints
[project.entry-points."invenio_base.apps"]
invenio_bulk_importer = "invenio_bulk_importer:InvenioBulkImporter"

[project.entry-points."invenio_base.api_apps"]
invenio_bulk_importer = "invenio_bulk_importer:InvenioBulkImporter"

[project.entry-points."invenio_base.api_blueprints"]
invenio_bulk_importer_ext = "invenio_bulk_importer.views:blueprint"
invenio_bulk_importer_tasks_api = "invenio_bulk_importer.views:create_tasks_bp"
invenio_bulk_importer_task_files_api = "invenio_bulk_importer.views:create_task_files_bp"
invenio_bulk_importer_records_api = "invenio_bulk_importer.views:create_records_bp"

[project.entry-points."invenio_base.blueprints"]
invenio_bulk_importer_ext = "invenio_bulk_importer.views:blueprint"

[project.entry-points."invenio_celery.tasks"]
invenio_bulk_importer = "invenio_bulk_importer.tasks"

[project.entry-points."invenio_db.alembic"]
invenio_bulk_importer = "invenio_bulk_importer:alembic"

[project.entry-points."invenio_db.models"]
invenio_bulk_importer = "invenio_bulk_importer.records.models"

[project.entry-points."invenio_search.mappings"]
importertasks = "invenio_bulk_importer.records.mappings"
importerrecords = "invenio_bulk_importer.records.mappings"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_bulk_importer"

[project.entry-points."invenio_base.finalize_app"]
invenio_bulk_importer = "invenio_bulk_importer.ext:finalize_app"

[project.entry-points."invenio_base.api_finalize_app"]
invenio_bulk_importer = "invenio_bulk_importer.ext:api_finalize_app"

[project.entry-points."invenio_administration.views"]
invenio_bulk_importer_tasks_list = "invenio_bulk_importer.administration.importer_tasks:ImporterTaskListView"
invenio_bulk_importer_tasks_detail = "invenio_bulk_importer.administration.importer_tasks:ImporterTaskDetailView"

[project.entry-points."invenio_assets.webpack"]
invenio_bulk_importer = "invenio_bulk_importer.webpack:bulk_importer"

# Tools in alphabetical order
[tool.babel.compile_catalog]
directory = "invenio_bulk_importer/translations/"
use-fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "Ubiquity Press"
msgid_bugs_address = "esteban.gabancho@ubiquitypress.com"
mapping_file = "babel.ini"
output_file = "invenio_bulk_importer/translations/messages.pot"
add-comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_bulk_importer/translations/messages.pot"
output_dir = "invenio_bulk_importer/translations/"

[tool.babel.javascript]
"**.js" = { encoding = "utf-8", extract_messages = ["$_", "jQuery._"] }

[tool.babel.jinja2]
"**/templates/**.html" = { encoding = "utf-8" }

[tool.babel.python]
"**.py" = { encoding = "utf-8" }

[tool.bable.update_catalog]
input_file = "invenio_bulk_importer/translations/messages.pot"
output_dir = "invenio_bulk_importer/translations/"

[tool.hatch.version]
path = "invenio_bulk_importer/__init__.py"

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = [
    "D401",
    "D403",
]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--black --isort --pydocstyle --doctest-glob=\"*.rst\" --doctest-modules --cov=invenio_bulk_importer --cov-report=term-missing"
testpaths = [
    "docs",
    "tests",
    "invenio_bulk_importer",
]
filterwarnings = [
    "ignore::marshmallow.warnings.RemovedInMarshmallow4Warning",
]

